[project]
name = "cummand"
version = "0.2.0"
description = "A lightweight CLI tool that securely tunnels your local development servers to the public internet using custom, memorable aliases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
cummand = "cummand.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cummand = ["py.typed"]
